--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-authors = ["Brian Heylin <syslog-fmt@heylin.nl>"]
+authors = ["opensource@tandemdrive.com"]
 description = "A formatter for the 5425 syslog protocol"
 edition = "2021"
 keywords = ["syslog", "rfc-5424", "logging", "logs"]
 license = "MIT OR Apache-2.0"
 name = "syslog_fmt"
 readme = "README.md"
-repository = "https://github.com/bheylin/syslog-suite"
+repository = "https://github.com/tandemdrive/syslog-fmt"
 rust-version = "1.60"
 version = "0.1.0"
 
