--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
     - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable # MSRV
-    - run: cargo check --workspace --verbose
-    - run: cargo check --workspace --verbose --no-default-features
+    - run: cargo check --verbose
+    - run: cargo check --verbose --no-default-features
 
   test:
     strategy:
@@ -37,14 +37,14 @@ jobs:
     - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable
-    - run: cargo test --workspace --verbose
+    - run: cargo test --verbose
 
   clippy:
     runs-on: ubuntu-latest
     timeout-minutes: 45
     steps:
     - uses: actions/checkout@v3
-    - run: cargo clippy --workspace --all-targets --all-features
+    - run: cargo clippy --all-targets --all-features
 
   format:
     runs-on: ubuntu-latest
@@ -60,7 +60,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: EmbarkStudios/cargo-deny-action@v1
       with:
-        arguments: --all-features --workspace
+        arguments: --all-features
 
   docs:
     runs-on: ubuntu-latest
@@ -72,7 +72,7 @@ jobs:
           toolchain: stable
         env:
           RUSTDOCFLAGS: -D warnings
-      - run: cargo doc --workspace --all-features --no-deps --document-private-items
+      - run: cargo doc --all-features --no-deps --document-private-items
 
   outdated:
     runs-on: ubuntu-latest
@@ -81,4 +81,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/install@cargo-outdated
-      - run: cargo outdated --workspace --exit-code 1
+      - run: cargo outdated --exit-code 1
