--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ chrono = { version = "0.4.24", default-features = false, features = ["clock"]}
 arrayvec = "0.7.2"
 assert_matches = "1.5.0"
 env_logger = "0.10.0"
+is-terminal = "0.4.7"
+log = "0.4.17"
+parking_lot = "0.12.1"
