--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,16 @@ chrono = { version = "0.4.24", optional = true, default-features = false, featur
 [dev-dependencies]
 arrayvec = "0.7.2"
 assert_matches = "1.5.0"
+dhat = "0.3.2"
 env_logger = "0.10.0"
 is-terminal = "0.4.7"
 log = "0.4.17"
 parking_lot = "0.12.1"
+
+[[test]]
+name = "assert_no_heap_allocations"
+harness = false
+
+[[test]]
+name = "assert_heap_allocations_with_structured_data"
+harness = false
